# structured

./: .gitignore  README.md  pyproject.toml
src/structured/document/: elements.py
src/structured/parser/: docx.py
src/structured/utils/: text.py
